Replace non-needed OptionalUtil.toStream()